--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body style="font-family: sans-serif;">
 
-  <h1>ABDUL SAMAD Periodic Table</h1>
-  <table border="1">
+ <center> <h1>ABDUL SAMAD Periodic Table</h1></center>
+  <center>  <table border="1">
     <tr>
       <td style="background-color: rgb(102, 153, 179)">H</td>
       <td colspan="17"></td>
@@ -150,7 +150,9 @@
       <td style="background-color: rgb(179, 128, 128)">No</td>
       <td style="background-color: rgb(179, 128, 128)">Lr</td>
     </tr>
-  </table>
+  </table> 
+    <center> 
 
 </body>
+
 </html>
