--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body style="font-family: sans-serif;">
 
- <center> <h1>ABDUL SAMAD Periodic Table</h1></center>
-  <center>  <table border="1">
+<h1 >ABDUL SAMAD Periodic Table</h1>
+<table border="1">
     <tr>
       <td style="background-color: rgb(102, 153, 179)">H</td>
       <td colspan="17"></td>
@@ -151,8 +151,7 @@
       <td style="background-color: rgb(179, 128, 128)">Lr</td>
     </tr>
   </table> 
-    <center> 
-
 </body>
 
 </html>
+
