--- a/index.html
+++ b/index.html
@@ -3,8 +3,23 @@
 <head>
   <title>ABDUL SAMAD</title>
 </head>
-<body style="font-family: sans-serif;">
+  <styal>
+    #logo {
+    display: block;
+    width: 150px;
+    height: 50px;
+    background-image: url('/images/website-logo.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    /* Text ko hide karne ke liye (agar sirf image dikhana hai) */
+    text-indent: -9999px;
+}
+  </styal>
 
+<body style="font-family: sans-serif;">
+<header>
+    <a href="/C:\Users\Muhammad Salaar\Downloads\Gemini_Generated_Image_iu65rsiu65rsiu65.png" id="logo">My Website</a>
+</header>
 <h1 >ABDUL SAMAD Periodic Table</h1>
 <table border="1">
     <tr>
@@ -154,6 +169,7 @@
 </body>
 
 </html>
+
 
 
 
