--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body style="font-family: sans-serif;">
 <img src="https://lh3.googleusercontent.com/a/ACg8ocJcvR3g_6ygg_yloKjb4kyMr_iTP_lAAqB5k4uxXD57Rco7Fj4=s288-c-no" 
-https://lh3.googleusercontent.com/a/ACg8ocJcvR3g_6ygg_yloKjb4kyMr_iTP_lAAqB5k4uxXD57Rco7Fj4=s288-c-no>
+style="border-radius: 50%; width: 200px; height: 200px; object-fit: cover;">
 <h1 >ABDUL SAMAD Periodic Table</h1>
 <table border="1">
     <tr>
@@ -155,6 +155,7 @@ https://lh3.googleusercontent.com/a/ACg8ocJcvR3g_6ygg_yloKjb4kyMr_iTP_lAAqB5k4ux
 </body>
 
 </html>
+
 
 
 
